# SPDX-FileCopyrightText: 2020 - 2024 University of Rochester
#
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "sass-isa-ast"
version = "1.0.0"
description = "A library for parsing the Abstract Syntax Tree (AST) of NVIDIA's SASS ISA."
authors = ["Benjamin Valpey <bavalpey@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
